ezyplot-x1/force-app/main/default/objects/Popular_properties__c/Popular_properties__c.object-meta.xml
<CustomObject>
    <label>Popular properties</label>
    <nameField>
        <label>Popular properties</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Popular properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>