ezyplot-x1/force-app/main/default/objects/Popular_properties__c/fields/Area_retrieval_status__c.field-meta.xml
<CustomField>
    <fullName>Area_retrieval_status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area_retrieval_status</label>
    <referenceTo>Area_retrieval_status__c</referenceTo>
    <relationshipLabel>Popular properties</relationshipLabel>
    <relationshipName>Popular_properties</relationshipName>
    <type>Lookup</type>
</CustomField>