ezyplot-x1/force-app/main/default/objects/Popular_properties__c/fields/Average_Ask__c.field-meta.xml
<CustomField>
    <fullName>Average_Ask__c</fullName>
    <label>Average Ask</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>