ezyplot-x1/force-app/main/default/objects/Popular_properties__c/fields/Checked__c.field-meta.xml
<CustomField>
    <fullName>Checked__c</fullName>
    <label>Checked</label>
    <type>Date</type>
</CustomField>