ezyplot-x1/force-app/main/default/objects/Popular_properties__c/fields/Distance_max__c.field-meta.xml
<CustomField>
    <fullName>Distance_max__c</fullName>
    <label>Distance (max)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>