ezyplot-x1/force-app/main/default/objects/Popular_properties__c/fields/Lat_in__c.field-meta.xml
<CustomField>
    <fullName>Lat_in__c</fullName>
    <label>Lat_in</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>