ezyplot-x1/force-app/main/default/objects/Popular_properties__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Units__c</columns>
    <columns>NAME</columns>
    <columns>Average_Ask__c</columns>
    <columns>Distance_max__c</columns>
    <columns>Area_retrieval_status__c</columns>
    <columns>Lat_in__c</columns>
    <columns>Lng_in__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>